    specifier no longer causes infinite recursion.
  * bug fix: SB-EXT:MUFFLE-CONDITIONS declarations no longer trigger a 
    bogus warning in DEFMETHOD bodies (reported by Kevin Reid)
  * bug fix: an &environment argument with the correct variable information
    is passed to macros that are expanded during byte compilation
    (reported by Samium Gromoff)
  * bug fix: a logical error was causing the hash function for bignums to
    have excessive amounts of collisions (reported by Faré Rideau)
  * improvement: the x86-64/darwin port now passes all tests and
    should be considered non-experimental.
  * improvement: a style-warning is signaled for CASE (etc) clauses with
    duplicate keys (thanks to Kevin Reid)

changes in sbcl-1.0.4 relative to sbcl-1.0.3:
  * new platform: experimental support for x86-64/darwin (MacOS).
  * incompatible change: the thread-safe (on most platforms) getaddrinfo
    and getnameinfo sockets functions are used instead of gethostbyaddr
    and gethostbyname, on platforms where the newer functions are available.
    As a result, the ALIASES field of HOST-ENT will always be NIL on these
    platforms.
  * change: runtimes with embedded cores (i.e. saved with :EXECUTABLE T)
    don't print the startup banner, but behave as if --noinform was passed
    as a command line argument. (thanks to Kevin Reid)
  * new experimental feature: added JOIN-THREAD (by NIIMI Satoshi)
  * optimization: code using alien values with undeclared types is much faster.
  * optimization: the compiler is now able to open code SEARCH in more cases.
  * optimization: more compact typechecks on x86-64 (thanks to Lutz Euler)
  * bug fix: using standardized COMMON-LISP special variables as loop
    variables no longer signals bogus package lock violations. (reported
    by Eric Marsden)
  * bug fix: declaring local loop variables to be of a range-limited type
    such as (SINGLE-FLOAT 1.0 2.0) no longer causes a compile-time error.
    (reported by Andras Simon)